edited CMakeLists.txt to move enable_testing() to root CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+enable_testing()
+
 # Add library
 add_library(lib SHARED src/lib.cpp)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
